--- a/assets/search-bar-1234/full.less
+++ b/assets/search-bar-1234/full.less
@@ -7,11 +7,11 @@
 .search-icon-visible {
   background: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search" viewBox="0 0 24 24"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>') no-repeat center !important;
   border: none !important; 
-    width: 40px;
-    height: 40px;
-    box-sizing: border-box;
-    padding: 0 !important;
-    font-size: 0 !important;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  padding: 0 !important;
+  font-size: 0 !important;
 }
 
 .btn-search {
@@ -19,22 +19,20 @@
   z-index: 10;
   margin: 0 15px 0;
   padding: 12px 24px;
-    border: none;
-    border-radius: 4px;
-    background-color: var(--search-btn-color);
-    color: var(--search-btn-text-color);
-    font-size: 14px;
-    font-family: var(--btn-search-font);
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: opacity 0.2s, transform 0.2s; 
+  border: none;
+  border-radius: 4px;
+  background-color: var(--search-btn-color);
+  color: var(--search-btn-text-color);
+  font-size: 14px;
+  font-family: var(--btn-search-font);
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: opacity 0.2s, transform 0.2s; 
   font-weight: 600 !important;
-  
-  
   &:hover {
     opacity: .9;
-   // background-color: #0056b3;        
-  transform: translateY(-1px);    
+    // background-color: #0056b3;        
+    transform: translateY(-1px);    
   }
 }
 
@@ -50,14 +48,11 @@
   background: #322d2d;
   z-index: 15;
   opacity: 0;
-
-
-
   .modal-content {
     width: 80vw;
     height: auto;
     margin: auto;
-    //display: flex;
+    // display: flex;
     align-items: center;
     justify-content: center;
     padding: 50px 30px;
@@ -88,7 +83,6 @@
   }
 
   .search-list {
-
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -110,7 +104,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-
   }
 
   .search-icon {
@@ -150,8 +143,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     transition: box-shadow 0.15s ease;
-
-
+    overflow: hidden;
     &:hover {
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15), 0 4px 6px rgba(0, 0, 0, 0.1);
     }
