--- a/assets/marca/backup.less
+++ b/assets/marca/backup.less
@@ -1,5 +1,5 @@
 /* Marca Plugin */
-@marca-loading-animation-image: https://static1.squarespace.com/static/666ac8d0f9ad2a6a516ba915/t/672cc09c149c391a8bf993a4/1730986140963/Spinner%401x-1.0s-200px-200px.gif;
+@marca-loading-animation-image: 'https://static1.squarespace.com/static/666ac8d0f9ad2a6a516ba915/t/672cc09c149c391a8bf993a4/1730986140963/Spinner%401x-1.0s-200px-200px.gif';
 @marca-loading-animation-bottom-position: 0;
 @marca-loading-animation-width: 140px;
 @marca-loading-animation-height: 140px;
